# ubuntuRouter

./: .gitignore  DEVELOPMENT_PROCESS.md  README.md  deploy.sh  install.sh  phase3_status.md  pyproject.toml  run.py  test_import.py  ubunturouter.sh
01-requirements/: PRD.md  non-functional-req.md  user-stories.md
02-feasibility/: feasibility-report.md  tech-selection.md
03-high-level-design/: HLD.md  data-flow.md  module-overview.md
04-detailed-design/: config-engine.md  dhcp-dns-manager.md  firewall-manager.md  installer-initializer.md  network-manager.md  routing-manager.md  vpn-manager.md
05-architecture/: ADR-001-nftables.md  ADR-002-netplan.md  ADR-003-fastapi.md  ADR-004-dns-dhcp.md  ADR-005-vuejs.md  ADR-006-yaml.md  ADR-007-docker.md  ADR-008-appstore-repo.md  ADR-009-traffic-orchestrator.md
06-api-spec/: cli-interface.md  rest-api-v1.md
07-test-plan/: acceptance-checklist.md  test-strategy.md
08-deployment/: installation-guide.md
09-iteration-plans/: p0-appstore-ddns-storage.md  p1-monitor-samba.md  sprint-01-config-engine.md  sprint-02-api-dashboard.md  sprint-03-firewall-dhcp-routing.md  sprint-04-vpn-geo-multiwan.md  sprint-04-vpn-topo-multiwan.md  sprint-05-appstore-container.md  sprint-06-traffic-orchestrator.md  sprint-07-vm-release.md
deploy/: ubunturouter-init.service  ubunturouter.service
docs/: 1panel-appstore-analysis.md  dev-plan-phases.md  gap-analysis-full-menu-vs-istoreos.md  gap-analysis-vs-istoreos.md  next-phase-development-plan.md  phase6-p2-design.md  phase7-p3-design.md  phase8-p4-design.md  sprint4-design.md
(+221 files in other folders)
